--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 1
+    parallelism: 4
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -134,7 +134,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -316,7 +316,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 10
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -423,10 +423,10 @@ jobs:
   j11_unit_tests:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -534,10 +534,10 @@ jobs:
   repeated_upgrade_dtest:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:latest
-    resource_class: large
+    resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -660,7 +660,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 50
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -756,7 +756,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 50
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -853,7 +853,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 50
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -950,7 +950,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 50
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1047,7 +1047,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 16
+    parallelism: 10
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1158,7 +1158,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 50
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1254,7 +1254,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1400,7 +1400,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1523,7 +1523,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 50
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1623,7 +1623,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 50
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1697,10 +1697,10 @@ jobs:
   j8_upgradetests-no-vnodes:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:latest
-    resource_class: large
+    resource_class: xlarge
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 100
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1774,7 +1774,7 @@ jobs:
   utests_stress:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
     parallelism: 1
@@ -1838,10 +1838,10 @@ jobs:
   j8_unit_tests:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -1951,7 +1951,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 16
+    parallelism: 10
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2059,7 +2059,7 @@ jobs:
   j11_build:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
     parallelism: 1
@@ -2159,7 +2159,7 @@ jobs:
   j11_cqlshlib_tests:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
     parallelism: 1
@@ -2215,10 +2215,10 @@ jobs:
   j11_repeated_utest:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2401,7 +2401,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 50
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2478,7 +2478,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 50
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2575,7 +2575,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 10
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2682,7 +2682,7 @@ jobs:
   j8_build:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
     parallelism: 1
@@ -2784,7 +2784,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 50
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2880,7 +2880,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 50
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -2973,7 +2973,7 @@ jobs:
   utests_long:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
     parallelism: 1
@@ -3037,10 +3037,10 @@ jobs:
   utests_system_keyspace_directory:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -3147,7 +3147,7 @@ jobs:
   j8_cqlshlib_tests:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
     parallelism: 1
@@ -3202,7 +3202,7 @@ jobs:
   utests_fqltool:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
     parallelism: 1
@@ -3269,7 +3269,7 @@ jobs:
     resource_class: large
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 50
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -3366,10 +3366,10 @@ jobs:
   utests_compression:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -3476,10 +3476,10 @@ jobs:
   j8_repeated_utest:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
-    parallelism: 20
+    parallelism: 25
     steps:
     - attach_workspace:
         at: /home/cassandra
@@ -3658,7 +3658,7 @@ jobs:
   j8_dtest_jars_build:
     docker:
     - image: apache/cassandra-testing-ubuntu2004-java11-w-dependencies:latest
-    resource_class: large
+    resource_class: medium
     working_directory: ~/
     shell: /bin/bash -eo pipefail -l
     parallelism: 1
