CASSANDRA-17724: Remove commons-lang dependency during build runtime
`commons-lang` is not a runtime dependency and a `java.lang.NoClassDefFoundError: org/apache/commons/lang/StringUtils`
exception is encountered during startup when hitting the codepath in `StartupClusterConnectivityChecker`.

This error is encountered very infrequently, but it has the potential of preventing the `CassandraDaemon` from starting up.

This commit will fail the build process when the `org.apache.commons.lang.*` namespace is used in the code. This will prevent
anyone from adding the `commons-lang` build runtime dependency that is not available during runtime.

--- a/build.xml
+++ b/build.xml
@@ -561,6 +561,7 @@
           <dependency groupId="org.apache.hadoop" artifactId="hadoop-core" version="1.0.3" scope="provided">
             <exclusion groupId="org.mortbay.jetty" artifactId="servlet-api"/>
             <exclusion groupId="commons-logging" artifactId="commons-logging"/>
+            <exclusion groupId="commons-lang" artifactId="commons-lang"/>
             <exclusion groupId="org.eclipse.jdt" artifactId="core"/>
             <exclusion groupId="ant" artifactId="ant"/>
             <exclusion groupId="junit" artifactId="junit"/>
