CIRCLE FAIL ON ERROR DO NOT MERGE

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -296,7 +296,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -406,7 +406,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -516,7 +516,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -640,7 +640,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -736,7 +736,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -832,7 +832,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -929,7 +929,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -1026,7 +1026,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -1137,7 +1137,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -1244,7 +1244,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -1340,7 +1340,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -1485,7 +1485,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -1609,7 +1609,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -1708,7 +1708,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -1786,7 +1786,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -1863,7 +1863,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -1927,7 +1927,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -2037,7 +2037,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -2147,7 +2147,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -2247,7 +2247,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -2303,7 +2303,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -2486,7 +2486,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -2564,7 +2564,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -2660,7 +2660,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -2771,7 +2771,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -2870,7 +2870,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -2966,7 +2966,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -3062,7 +3062,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -3126,7 +3126,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -3236,7 +3236,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -3291,7 +3291,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -3355,7 +3355,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -3454,7 +3454,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -3565,7 +3565,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
@@ -3747,7 +3747,7 @@ jobs:
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_VNODES: false
     - REPEATED_UTEST_COUNT: 1000
-    - REPEATED_UTEST_STOP_ON_FAILURE: false
+    - REPEATED_UTEST_STOP_ON_FAILURE: true
     - REPEATED_DTEST_NAME: null
     - REPEATED_DTEST_VNODES: false
     - REPEATED_DTEST_COUNT: 100
